# luajit-ffi-playground

./: .gitignore  CMakeLists.txt  helloWorld.lua  package-lock.json  package.json  tsconfig.json
cmake/: fillSetSources.ts
src/cpp/common/: add.cpp  add.hpp
